landing page images and alignment completed

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -41,9 +41,20 @@
     font-size: 1.2rem;
 }
 
-// .graphs-section {
-//  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
-// }
+.graphs-section {
+    display: flex;
+    justify-content: space-around;
+}
+
+.graphs-section div {
+    font-family: 'acumin';
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.graphs-section div img {
+    height: 200px;
+}
 
 .view-more-data-btn-container {
     height: 44px;
