--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -61,7 +61,21 @@
     width: 180px;
     margin: 0 auto;
     text-align: center;
+    margin-top: 3%;
     margin-bottom: 10%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.view-button {
+    margin-left: -20%;
+    margin-right: 5%;
+}
+
+.download-button {
+    margin-left: 8%;
+    margin-right: -50%;
 }
 
 .middle-section {
@@ -86,9 +100,44 @@
     font-size: 1.4rem;
 }
 
-// .bottom-section {
-//      ADD THIS BACK IN WHEN YOU HAVE A BOTTOM SECTION
-// }
+.bottom-section h1 {
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    font-weight: normal;
+
+}
+
+.data-container {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.data-container div {
+    margin: 2%;
+    width: 433px;
+}
+
+.data-container h2 {
+    font-size: 3rem;
+    font-weight: normal;
+}
+
+.data-container h3 {
+    font-weight: normal;
+    font-size: 1.2rem;
+}
+
+.read-more-data-btn-container {
+    height: 44px;
+    width: 200px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2%;
+}
 
 .back-to-top {
     width: 8%;
@@ -143,6 +192,18 @@
     .graphs-section {
         display: block;
         width: 100%;
+    }
+
+    .view-more-data-btn-container {
+        height: 44px;
+        width: 180px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+
+    .view-more-data-btn-container button {
+        margin: 2%;
     }
 
     .grant-rates-by-office-graph-container {
@@ -257,6 +318,18 @@
         width: 100%;
     }
 
+    .view-more-data-btn-container {
+        height: 44px;
+        width: 180px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+
+    .view-more-data-btn-container button {
+        margin: 2%;
+    }
+
     .grant-rates-by-office-graph-container {
         margin-top: 20%;
         margin-bottom: 40%;
@@ -300,9 +373,14 @@
         font-size: 1.1rem;
         color: @white;
     }
+    
+    .bottom-section {
+        text-align: center;
+        margin: 0 1rem 
+    }
 
     .bottom-section h1 {
-        font-size: 2.1rem;
+        font-size: 3rem;
     }
 
     .data-container {
@@ -484,6 +562,18 @@
     .graphs-section {
         display: block;
         width: 100%;
+    }
+
+    .view-more-data-btn-container {
+        height: 44px;
+        width: 180px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+
+    .view-more-data-btn-container button {
+        margin: 2%;
     }
 
     .grant-rates-by-office-graph-container {
