--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -44,16 +44,12 @@
 .graphs-section {
     display: flex;
     justify-content: space-around;
-}
-
-.graphs-section div {
-    font-family: 'acumin';
     font-size: 1.5rem;
     text-align: center;
 }
 
-.graphs-section div img {
-    height: 200px;
+.graphs-section img {
+    height: 250px;
 }
 
 .view-more-data-btn-container {
@@ -104,7 +100,7 @@
     font-size: 3rem;
     text-align: center;
     margin-top: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     font-weight: normal;
 
 }
